# Capitol_resources

./: some_extra_file.txt
.cph/: .C_XOR_factorization.cpp_04d7ebf8f451ceeb16465b33d483b1cd.prob
Optimizations_in_c++/: List.md  SSO.cpp  branch  branch.cpp  locstat.cpp  macro.cpp  run.sh  threading  threading.cpp
Optimizations_in_c++/IGNORE THIS/: mempooldemo.cpp
getting_started_with_writing_cli_in_C++/: steps_to_go.md
getting_started_with_writing_cli_in_C++/createThreadFunction/: CMakeLists.txt
getting_started_with_writing_cli_in_C++/createThreadFunction/source/: main.cpp
getting_started_with_writing_cli_in_C++/demo/: CMakeLists.txt  steps_to_go.md
getting_started_with_writing_cli_in_C++/demo/source/: main.cpp
getting_started_with_writing_cli_in_C++/lockFreeQueue/: BENCHMARK.md  CMakeLists.txt  library_guine.md
getting_started_with_writing_cli_in_C++/lockFreeQueue/app/: main.cpp
getting_started_with_writing_cli_in_C++/lockFreeQueue/app/.cph/: .main.cpp_1ae7252189799aa0fe28043a2d30699a.prob
getting_started_with_writing_cli_in_C++/lockFreeQueue/core/include/: fast_lf_queue.h  lf_queue.h
getting_started_with_writing_cli_in_C++/logger/: CMakeLists.txt
getting_started_with_writing_cli_in_C++/logger/app/: main.cpp
getting_started_with_writing_cli_in_C++/logger/core/include/: lf_queue.h
getting_started_with_writing_cli_in_C++/logger_demo/: CMakeLists.txt
getting_started_with_writing_cli_in_C++/logger_demo/app/: main.cpp
getting_started_with_writing_cli_in_C++/logger_demo/core/include/: imp_macros.h  lf_queue.h  logger.h  thread_utils.h  time_util.h
getting_started_with_writing_cli_in_C++/memoryPool/: CMakeLists.txt
getting_started_with_writing_cli_in_C++/memoryPool/source/: main.cpp
getting_started_with_writing_cli_in_C++/multi_threading_basic/: CMakeLists.txt
getting_started_with_writing_cli_in_C++/multi_threading_basic/source/: main.cpp
